--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -179,15 +179,15 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
             document.getElementById("area" + i).style.display = "none";
         }
 
-        obj.style.display = "";
+        document.getElementById("area" + obj).style.display = "";
     }
 </script>
 
 <div class="menu-box">
-<h3 class="mytaobao-bar"><span> 好评有礼 </span>
+<h3 class="mytaobao-bar" onclick="focusObj(1)"><span> 好评有礼 </span>
 <button class="menu-close">-</button>
 </h3>
-<ul class="group" id="area1" onclick="focusObj(this)">
+<ul class="group" id="area1">
 		<li><span> <a
 		href="http://haoping.7fshop.com/top/reviewnew/setting.aspx" target="mainframe2">基本设置</a></span></li>
 		<li><span> <a
@@ -196,10 +196,10 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 </div>
 
 <div class="menu-box">
-<h3 class="mytaobao-bar"><span> 商品评价 </span>
+<h3 class="mytaobao-bar" onclick="focusObj(2)"><span> 商品评价 </span>
 <button class="menu-close">-</button>
 </h3>
-<ul class="group" id="area2" style="display:none" onclick="focusObj(this)">
+<ul class="group" id="area2" style="display:none">
 		<li ><span> <a
 		href="http://haoping.7fshop.com/top/reviewnew/reviewlist.aspx" target="mainframe2">好评列表</a></span></li>	
 		<li ><span> <a
@@ -208,10 +208,10 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 </div>
 
 <div class="menu-box">
-<h3 class="mytaobao-bar"><span> 短信提醒 </span>
+<h3 class="mytaobao-bar" onclick="focusObj(3)"><span> 短信提醒 </span>
 <button class="menu-close">-</button>
 </h3>
-<ul class="group" id="area3" style="display:none" onclick="focusObj(this)">
+<ul class="group" id="area3" style="display:none">
 		<li ><span> <a
 		href="http://haoping.7fshop.com/top/reviewnew/msg.aspx" target="mainframe2">短信提醒设置</a></span></li>	
 		<li ><span> <a
@@ -225,10 +225,10 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 
 
 <div class="menu-box">
-<h3 class="mytaobao-bar"><span> 优惠券赠送 </span>
+<h3 class="mytaobao-bar" onclick="focusObj(4)"><span> 优惠券赠送 </span>
 <button class="menu-close">-</button>
 </h3>
-<ul class="group" id="area4" style="display:none" onclick="focusObj(this)">
+<ul class="group" id="area4" style="display:none">
 		<li ><span> <a
 		href="http://haoping.7fshop.com/top/reviewnew/couponlist.aspx" target="mainframe2">优惠券管理</a></span></li>		
 		<li ><span> <a
@@ -241,10 +241,10 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 
 
 <div class="menu-box">
-<h3 class="mytaobao-bar"><span> 支付宝红包 </span>
+<h3 class="mytaobao-bar" onclick="focusObj(5)"><span> 支付宝红包 </span>
 <button class="menu-close">-</button>
 </h3>
-<ul class="group" id="area5" style="display:none" onclick="focusObj(this)">
+<ul class="group" id="area5" style="display:none">
 		<li><span> <a href="http://haoping.7fshop.com/top/reviewnew/alipayadd.aspx" target="mainframe2">导入支付宝红包</a></span></li>		
 		<li><span> <a href="http://haoping.7fshop.com/top/reviewnew/alipay.aspx" target="mainframe2">支付宝红包赠送记录</a></span></li>		
 		<li><span> <a href="http://haoping.7fshop.com/top/reviewnew/alipaymsgsend.aspx" target="mainframe2">手动赠送</a></span></li>		
@@ -253,10 +253,10 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 
 
 <div class="menu-box">
-<h3 class="mytaobao-bar"><span> 二次销售统计 </span>
+<h3 class="mytaobao-bar" onclick="focusObj(6)"><span> 二次销售统计 </span>
 <button class="menu-close">-</button>
 </h3>
-<ul class="group" id="area6" style="display:none" onclick="focusObj(this)">
+<ul class="group" id="area6" style="display:none">
 		<li><span> <a href="http://haoping.7fshop.com/top/reviewnew/saletotal.aspx" target="mainframe2">二次销售总览</a></span></li>		
 		<li><span> <a href="http://haoping.7fshop.com/top/reviewnew/salelist.aspx" target="mainframe2">二次销售详情</a></span></li>		
 	</ul>
