--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -175,11 +175,11 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 
 <script language="javascript" type="text/javascript">
     function focusObj(obj) {
-        for (var i = 1; i < 7; i++) {
+        /*for (var i = 1; i < 7; i++) {
             document.getElementById("area" + i).style.display = "none";
         }
 
-        document.getElementById("area" + obj).style.display = "";
+        document.getElementById("area" + obj).style.display = "";*/
     }
 </script>
 
@@ -199,7 +199,7 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 <h3 class="mytaobao-bar" onclick="focusObj(2)"><span> 商品评价 </span>
 <button class="menu-close">-</button>
 </h3>
-<ul class="group" id="area2" style="display:none">
+<ul class="group" id="area2" style="">
 		<li ><span> <a
 		href="http://haoping.7fshop.com/top/reviewnew/reviewlist.aspx" target="mainframe2">好评列表</a></span></li>	
 		<li ><span> <a
@@ -211,7 +211,7 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 <h3 class="mytaobao-bar" onclick="focusObj(3)"><span> 短信提醒 </span>
 <button class="menu-close">-</button>
 </h3>
-<ul class="group" id="area3" style="display:none">
+<ul class="group" id="area3" style="">
 		<li ><span> <a
 		href="http://haoping.7fshop.com/top/reviewnew/msg.aspx" target="mainframe2">短信提醒设置</a></span></li>	
 		<li ><span> <a
@@ -228,7 +228,7 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 <h3 class="mytaobao-bar" onclick="focusObj(4)"><span> 优惠券赠送 </span>
 <button class="menu-close">-</button>
 </h3>
-<ul class="group" id="area4" style="display:none">
+<ul class="group" id="area4" style="">
 		<li ><span> <a
 		href="http://haoping.7fshop.com/top/reviewnew/couponlist.aspx" target="mainframe2">优惠券管理</a></span></li>		
 		<li ><span> <a
@@ -244,7 +244,7 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 <h3 class="mytaobao-bar" onclick="focusObj(5)"><span> 支付宝红包 </span>
 <button class="menu-close">-</button>
 </h3>
-<ul class="group" id="area5" style="display:none">
+<ul class="group" id="area5" style="">
 		<li><span> <a href="http://haoping.7fshop.com/top/reviewnew/alipayadd.aspx" target="mainframe2">导入支付宝红包</a></span></li>		
 		<li><span> <a href="http://haoping.7fshop.com/top/reviewnew/alipay.aspx" target="mainframe2">支付宝红包赠送记录</a></span></li>		
 		<li><span> <a href="http://haoping.7fshop.com/top/reviewnew/alipaymsgsend.aspx" target="mainframe2">手动赠送</a></span></li>		
@@ -256,7 +256,7 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 <h3 class="mytaobao-bar" onclick="focusObj(6)"><span> 二次销售统计 </span>
 <button class="menu-close">-</button>
 </h3>
-<ul class="group" id="area6" style="display:none">
+<ul class="group" id="area6" style="">
 		<li><span> <a href="http://haoping.7fshop.com/top/reviewnew/saletotal.aspx" target="mainframe2">二次销售总览</a></span></li>		
 		<li><span> <a href="http://haoping.7fshop.com/top/reviewnew/salelist.aspx" target="mainframe2">二次销售详情</a></span></li>		
 	</ul>
