--- a/top/indexgroup2.html
+++ b/top/indexgroup2.html
@@ -24,23 +24,7 @@
         </ul>
     </div>
 
-
-<!--公告信息-->
-<div id="system-announce" style="display:none;">特特营销推广专家免费试用中，欢迎各位卖家提出宝贵意见~ 》。《</div>
-
-<!--LOGO 和 广告信息-->
-<h1 id="logo" style="height:100px; margin-top:0px; padding-top:5px;">
-
-<table cellpadding=0 cellspacing=0 width="100%">
-    <tr>
-        <td><img alt="特特团购_店内聚划算" src="images/logo.jpg" />
-	</td>
-        <td style="padding-left:20px;">
-	<img alt="特特团购_店内聚划算" src="images/banner.gif" /></td>
-    </tr>
-</table>
-	
-</h1>
+    <div style="width:928px;"><a href='http://fuwu.taobao.com/serv/my_service.htm' target="_blank"><img src='groupbuy/images/banner5yue.jpg' border='0' /></a></div>
 
 </div>
 
