--- a/top/indexgroup2.html
+++ b/top/indexgroup2.html
@@ -30,7 +30,7 @@
 
 
 
-<div id="content">
+<div id="content" style="margin-top:4px;">
     <div id="mytaobao-panel" class="grid-c2">
         <div class="col-sub">
             <div id="mytaobao-menu" class="box-diamond">
