--- a/top/indexgroup2.html
+++ b/top/indexgroup2.html
@@ -30,14 +30,14 @@
 
 
 
-<div id="content" style="margin-top:4px;">
+<div id="content" style="margin-top:6px;">
     <div id="mytaobao-panel" class="grid-c2">
         <div class="col-sub">
             <div id="mytaobao-menu" class="box-diamond">
 <!--content-->
 
 <div class="mytaobao-bd">
-
+<!--
 <div class="menu-box">
 <h3 class="mytaobao-bar"><span> 团购管理 </span>
 <button class="menu-close">-</button>
@@ -53,12 +53,12 @@
 		href="groupbuy/addtotaobao-1.aspx" target="mainframe">更新宝贝描述</a></span></li>		
 		<li ><span> <a
 		href="groupbuy/missionlist.aspx" target="mainframe">任务列表</a></span></li>		
-<!--		<li ><span> <a
+		<li ><span> <a
 		href="groupbuy/autocancle.aspx" target="mainframe">自动取消未付款订单</a></span></li>		
 		<li ><span> <a
-		href="groupbuy/build.aspx" target="mainframe">团购站外推广</a></span></li>	-->		
+		href="groupbuy/build.aspx" target="mainframe">团购站外推广</a></span></li>
     </ul>
-</div>
+</div>	-->		
 <div class="menu-box">
 <h3 class="mytaobao-bar"><span> 促销活动设置 </span>
 <button class="menu-close">-</button>
