--- a/top/indexgroup2.html
+++ b/top/indexgroup2.html
@@ -114,7 +114,7 @@
         </div>
         
         <div style="width:780px; margin-left:10px; float:left; height:820px;">
-                <iframe style="overflow:scroll; width: 100%; height:820px; padding:0px;" name="mainframe" src="groupbuy/groupbuyadd.aspx" frameborder="0" scrolling="no"></iframe>
+                <iframe style="overflow:scroll; width: 100%; height:820px; padding:0px;" name="mainframe" src="groupbuy/default.aspx" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
 </div>
