--- a/top/indexgroup2.html
+++ b/top/indexgroup2.html
@@ -65,11 +65,11 @@
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="groupbuy/groupbuy/activityadd.aspx" target="mainframe">添加促销活动</a></span></li>	
+		href="groupbuy/activityadd.aspx" target="mainframe">添加促销活动</a></span></li>	
         <li><span> <a
-		href="groupbuy/groupbuy/activityList.aspx" target="mainframe">促销活动管理</a></span></li>
+		href="groupbuy/activityList.aspx" target="mainframe">促销活动管理</a></span></li>
         <li><span> <a
-		href="groupbuy/groupbuy/activityshowitem.aspx" target="mainframe">促销商品管理</a></span></li>
+		href="groupbuy/activityshowitem.aspx" target="mainframe">促销商品管理</a></span></li>
     </ul>
 </div>
 <div class="menu-box">
@@ -78,9 +78,9 @@
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="groupbuy/groupbuy/activitysettemp.aspx" target="mainframe">设计橱窗模板</a></span></li>	
+		href="groupbuy/activitysettemp.aspx" target="mainframe">设计橱窗模板</a></span></li>	
         <li><span> <a
-		href="groupbuy/groupbuy/activitytempmanage.aspx" target="mainframe">橱窗模板管理</a></span></li>
+		href="groupbuy/activitytempmanage.aspx" target="mainframe">橱窗模板管理</a></span></li>
     </ul>
 </div>
 <div class="menu-box">
@@ -89,11 +89,11 @@
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="groupbuy/groupbuy/activityInstalltemp.aspx?ty=hand" target="mainframe">手动安装模板</a></span></li>	
+		href="groupbuy/activityInstalltemp.aspx?ty=hand" target="mainframe">手动安装模板</a></span></li>	
         <li><span> <a
-		href="groupbuy/groupbuy/activityInstalltemp.aspx?ty=auto" target="mainframe">自动安装模板</a></span></li>
+		href="groupbuy/activityInstalltemp.aspx?ty=auto" target="mainframe">自动安装模板</a></span></li>
         <li><span> <a
-		href="groupbuy/groupbuy/activitydeltemp.aspx" target="mainframe">删除橱窗模板</a></span></li>
+		href="groupbuy/activitydeltemp.aspx" target="mainframe">删除橱窗模板</a></span></li>
     </ul>
 </div>
 
