--- a/top/DataAnalysis/DataAnalysis.Web/indextongji.html
+++ b/top/DataAnalysis/DataAnalysis.Web/indextongji.html
@@ -186,6 +186,18 @@
                                             </ul>
                                         </div>
                                         
+                                         <div class="menu-box">
+                                            <h3 class="mytaobao-bar">
+                                                <span>成本管理 </span>
+                                                <button class="menu-close">
+                                                    -</button>
+                                            </h3>
+                                            <ul class="group">
+                                                <li><span><a href="http://ding.7fshop.com/UpdatePrice.aspx" target="mainframe6">进货价设置</a></span></li>
+                                                 <li><span><a href="http://ding.7fshop.com/UpdateCarriage.aspx" target="mainframe6">邮费设置</a></span></li>
+                                            </ul>
+                                        </div>
+                                        
                                         <div class="menu-box">
                                             <h3 class="mytaobao-bar">
                                                 <span>使用说明 </span>
