--- a/top/Qijia/Qijia.Web/detail/dialog1.html
+++ b/top/Qijia/Qijia.Web/detail/dialog1.html
@@ -1,5 +1,5 @@
 <div style="height:1000px;">
-<form action="" method="post">
+<form action="create.aspx" method="post">
 
 <table width="100%">
 <tr>
