--- a/top/DataAnalysis/DataAnalysis.Web/indextongji.html
+++ b/top/DataAnalysis/DataAnalysis.Web/indextongji.html
@@ -194,7 +194,8 @@
                                             </h3>
                                             <ul class="group">
                                                 <li><span><a href="http://ding.7fshop.com/UpdatePrice.aspx" target="mainframe6">进货价设置</a></span></li>
-                                                 <li><span><a href="http://ding.7fshop.com/UpdateCarriage.aspx" target="mainframe6">邮费设置</a></span></li>
+                                                <li><span><a href="http://ding.7fshop.com/UpdateCarriage.aspx" target="mainframe6">邮费设置</a></span></li>
+                                                <li><span><a href="http://ding.7fshop.com/Commerce.aspx" target="mainframe6">查看盈利</a></span></li>
                                             </ul>
                                         </div>
                                         
