--- a/top/groupbuy/tpl/stylenew2.html
+++ b/top/groupbuy/tpl/stylenew2.html
@@ -6,15 +6,12 @@
 
      <div style="text-align: center; padding: 10px 0px 10px 0pt; margin: 0pt 10px; border-bottom: 1px solid rgb(238, 238, 238);">
 
-                   <img src="http://img01.taobaocdn.com/imgextra/i1/204200856/T2MJtMXkBaXXXXXXXX_!!204200856.png" />
+                  <img src="http://groupbuy.7fshop.com/top/groupbuy/images/mall_protection_icon.png" /> 
 				
-				   <img src="http://groupbuy.7fshop.com/top/groupbuy/images/lp_icon.png" />
+				   <img src="http://groupbuy.7fshop.com/top/groupbuy/images/lp_protection_icon.png" />
 				    </div>         
 <div style="margin: 10px 10px 0px; padding: 5px 0pt 5px 20px;">                  
- <table><tbody><tr><td width="110" height="30" background="http://groupbuy.7fshop.com/top/groupbuy/images/bz.png" style="background-repeat: no-repeat; background-position: 0pt 0px; padding: 0pt 0pt 0pt 25px;"> </td><td width="110" height="30" background="http://groupbuy.7fshop.com/top/groupbuy/images/bz.png" style="background-repeat: no-repeat; background-position: 0pt -33px; padding: 0pt 0pt 0pt 25px;"> </td></tr>
-				   <tr><td width="110" height="30" background="http://groupbuy.7fshop.com/top/groupbuy/images/bz.png" style="background-repeat: no-repeat; background-position: 0pt -66px; padding: 0pt 0pt 0pt 25px;"> </td><td width="110" height="30" background="http://groupbuy.7fshop.com/top/groupbuy/images/bz.png" style="background-repeat: no-repeat; background-position: 0pt -99px; padding: 0pt 0pt 0pt 25px;"> </td></tr>
-				   <tr><td width="110" height="30" background="http://groupbuy.7fshop.com/top/groupbuy/images/bz.png" style="background-repeat: no-repeat; background-position: 0pt -132px; padding: 0pt 0pt 0pt 25px;"> </td><td width="110" height="30" background="http://groupbuy.7fshop.com/top/groupbuy/images/bz.png" style="background-repeat: no-repeat; background-position: 0pt -165px; padding: 0pt 0pt 0pt 25px;"> </td></tr>
-				   <tr><td width="110" height="30" background="http://groupbuy.7fshop.com/top/groupbuy/images/bz.png" style="background-repeat: no-repeat; background-position: 0pt -198px; padding: 0pt 0pt 0pt 25px;"> </td><td width="110" height="30" > </td></tr>
+ <table><tbody>{baoyou}
 				   </tbody></table>                 
 				 </div>
 </td>        <td style="vertical-align:top;width:445px; padding: 10px 15px 0 0; text-align:center;">           <div style="width:420px; margin:0 auto; background:#FFF;overflow:hidden;text-align:center; ">		    <a target="_blank" href="{producturl}"><img border="0" style="border: medium none; max-width: 420px; width: 420px;" src="{productimg}"></a> 		   </div>          </td>      </tr>      <tr valign="top">        <td height="30" background="" style="vertical-align:top; background-repeat:no-repeat; background-position: 0 -965px;" colspan="2"><div style="text-align:right;padding: 0 20px;font-size:12px;"><a style="font-size: 12px;" target="_blank" href="http://seller.taobao.com/fuwu/service.htm?service_id=11807">本团购活动由“特特团购”提供技术支持</a></div></td>      </tr>    </tbody>  </table>   <div style="width:750px; margin: 0 auto;"> {productlist}               <div style="clear:both;height: 0px;overflow: hidden;"></div>	</div></div>
