--- a/top/indexgroup2.html
+++ b/top/indexgroup2.html
@@ -73,29 +73,16 @@
     </ul>
 </div>
 <div class="menu-box">
-<h3 class="mytaobao-bar"><span> 橱窗模板设计 </span>
+<h3 class="mytaobao-bar"><span> 促销模板设计 </span>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="groupbuy/activitysettemp.aspx" target="mainframe">设计橱窗模板</a></span></li>	
+		href="groupbuy/activitysettemp.aspx" target="mainframe">设计促销模板</a></span></li>	
         <li><span> <a
-		href="groupbuy/activitytempmanage.aspx" target="mainframe">橱窗模板管理</a></span></li>
+		href="groupbuy/activitytempmanage.aspx" target="mainframe">促销模板管理</a></span></li>
     </ul>
-</div>
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 橱窗模板安装/删除 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-		<li><span> <a
-		href="groupbuy/activityInstalltemp.aspx?ty=hand" target="mainframe">手动安装模板</a></span></li>	
-        <li><span> <a
-		href="groupbuy/activityInstalltemp.aspx?ty=auto" target="mainframe">自动安装模板</a></span></li>
-        <li><span> <a
-		href="groupbuy/activitydeltemp.aspx" target="mainframe">删除橱窗模板</a></span></li>
-    </ul>
-</div>
+</div> 
 
 <!--<div class="menu-box">
 <h3 class="mytaobao-bar"><span> 帮助教程 </span>
