--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -34,7 +34,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
         </ul>
     </div>
     
-    <div style="width:928px;"><a href='http://fuwu.taobao.com/serv/my_service.htm' target="_blank"><img src='reviewnew/images/banner4yue.jpg' border='0' /></a></div>
+    <div style="width:928px;"><img src='reviewnew/images/banner4yue.jpg' border='0' /></div>
 
 <div id="content1">
 
