--- a/top/indexgroup2.html
+++ b/top/indexgroup2.html
@@ -83,6 +83,17 @@
 		href="groupbuy/activitytempmanage.aspx" target="mainframe">促销模板管理</a></span></li>
     </ul>
 </div> 
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 橱窗模板安装/删除 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+        <li><span> <a
+		href="groupbuy/addtotaobaoactivity-1.aspx" target="mainframe">自动安装模板</a></span></li>
+        <li><span> <a
+		href="groupbuy/activitymissionlist.aspx" target="mainframe">模板任务列表</a></span></li>
+    </ul>
+</div>
 
 <!--<div class="menu-box">
 <h3 class="mytaobao-bar"><span> 帮助教程 </span>
