--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -45,8 +45,8 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
     <img alt="特特营销推广专家" src="images/logo.png" width="150" height="40" />
 </div>
 <ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:600px; margin-top:10px;">
-   <li><a href="javascript:void(0)" title="营销推广" rel="1">营销推广</a></li>
-   <li><a href="javascript:void(0)" title="团购营销" rel="2">团购营销</a></li>
+   <li><a href="http://fuwu.taobao.com/serv/detail.htm?service_id=764&f=haoping" target="_blank" title="营销推广">营销推广</a></li>
+   <li><a href="http://fuwu.taobao.com/serv/detail.htm?service_id=11807&f=haoping" target="_blank" title="团购营销">团购营销</a></li>
    <li class="currentBtn"><a href="javascript:void(0)" title="好评有礼" rel="3">好评有礼</a></li>
    <li><a href="javascript:void(0)" title="客户关系营销" rel="4">客户关系营销</a></li>
    <li><a href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" title="社区">社区</a></li>
