--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -45,11 +45,11 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
     <img alt="特特营销推广专家" src="images/logo.png" width="150" height="40" />
 </div>
 <ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:600px; margin-top:10px;">
-   <li><a href="http://fuwu.taobao.com/serv/detail.htm?service_id=764&f=haoping" target="_blank" title="营销推广">营销推广</a></li>
-   <li><a href="http://fuwu.taobao.com/serv/detail.htm?service_id=11807&f=haoping" target="_blank" title="团购营销">团购营销</a></li>
+   <li class="noTab"><a href="http://fuwu.taobao.com/serv/detail.htm?service_id=764&f=haoping" target="_blank" title="营销推广">营销推广</a></li>
+   <li class="noTab"><a href="http://fuwu.taobao.com/serv/detail.htm?service_id=11807&f=haoping" target="_blank" title="团购营销">团购营销</a></li>
    <li class="currentBtn"><a href="javascript:void(0)" title="好评有礼" rel="3">好评有礼</a></li>
    <li><a href="javascript:void(0)" title="客户关系营销" rel="4">客户关系营销</a></li>
-   <li><a href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" title="社区">社区</a></li>
+   <li class="noTab"><a href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" title="社区">社区</a></li>
 </ul>
 </div>
 
@@ -299,6 +299,9 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
     tab.prototype = {
         ACTIVE: function () {
             var $ = function (o) { return document.getElementById(o) };
+
+            if (this['link']['cur'].className == "noTab") return;
+
             this['link']['cur'].className = this['css'][3];
             this.className = this['css'][2];
             try {
