--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -284,13 +284,16 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
             var j = 1;
             for (var i = 0; i < item.length - 1; i++) {
                 if (item[i].className.indexOf(css[2]) >= 0 || item[i].className.indexOf(css[3]) >= 0) {
-                    if (item[i].className == css[2]) o['cur'] = item[i];
-                    item[i].callBack = cb || function () { };
-                    item[i]['css'] = css;
-                    item[i]['link'] = o;
-                    this.ITEM[j] = item[i];
-                    item[i]['Index'] = j++;
-                    item[i][this.event] = this.ACTIVE;
+                    if (i == 0 || i == 1) {
+                    }else{
+                        if (item[i].className == css[2]) o['cur'] = item[i];
+                        item[i].callBack = cb || function () { };
+                        item[i]['css'] = css;
+                        item[i]['link'] = o;
+                        this.ITEM[j] = item[i];
+                        item[i]['Index'] = j++;
+                        item[i][this.event] = this.ACTIVE;
+                    }
                 }
             }
             return o;
@@ -299,8 +302,6 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
     tab.prototype = {
         ACTIVE: function () {
             var $ = function (o) { return document.getElementById(o) };
-            alert(this['link']['cur'].className);
-            if (this['link']['cur'].className == "noTab") return;
 
             this['link']['cur'].className = this['css'][3];
             this.className = this['css'][2];
