--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -139,6 +139,23 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 
 
 <div class="menu-box">
+<h3 class="mytaobao-bar"><span> 包邮卡 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/freecard/freecardadd.aspx" target="mainframe2">创建包邮卡</a></span></li>
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/freecard/freecardlist.aspx" target="mainframe2">包邮卡清单</a></span></li>
+	<li><span> <a
+		href="http://haoping.7fshop.com/top/freecard/freecardcustomer.aspx" target="mainframe2">赠送记录</a></span></li>
+	<li><span> <a
+		href="http://haoping.7fshop.com/top/freecard/freecardsend.aspx" target="mainframe2">手动赠送</a></span></li>
+	</ul>
+</div>
+
+
+<div class="menu-box">
 <h3 class="mytaobao-bar" onclick="focusObj(6)"><span> 二次销售统计 </span>
 <button class="menu-close">-</button>
 </h3>
@@ -199,29 +216,36 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 
 
 <div class="menu-box">
-<h3 class="mytaobao-bar"><span> 包邮卡 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/freecard/freecardadd.aspx" target="mainframe5">创建包邮卡</a></span></li>
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/freecard/freecardlist.aspx" target="mainframe5">包邮卡清单</a></span></li>
-	<li><span> <a
-		href="http://haoping.7fshop.com/top/freecard/freecardcustomer.aspx" target="mainframe5">赠送记录</a></span></li>
-	<li><span> <a
-		href="http://haoping.7fshop.com/top/freecard/freecardsend.aspx" target="mainframe5">手动赠送</a></span></li>
-	</ul>
-</div>
-
-
-<div class="menu-box">
 <h3 class="mytaobao-bar"><span> 优惠券赠送 </span>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">		
 		<li><span> <a href="http://haoping.7fshop.com/top/crm/msgsend.aspx" target="mainframe5">优惠券批量赠送</a></span></li>		
     </ul>
+</div>
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 客户筛选 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=1" target="mainframe5">购买过一次的会员</a></span></li>
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=2" target="mainframe5">购买过多次的会员</a></span></li>
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=0" target="mainframe5">未成功购买的会员</a></span></li>
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=a" target="mainframe5">未购买</a></span></li>
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=b" target="mainframe5">普通会员</a></span></li>
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=c" target="mainframe5">高级会员</a></span></li>
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=d" target="mainframe5">VIP会员</a></span></li>
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=e" target="mainframe5">至尊VIP会员</a></span></li>
+	</ul>
 </div>
 
 
