--- a/top/reviewnew/qubie.html
+++ b/top/reviewnew/qubie.html
@@ -27,7 +27,6 @@
 <tr>
 <td width="100%"  align="left">
 &nbsp;&nbsp;&nbsp;&nbsp;<img src="http://a.tbcdn.cn/sys/wangwang/smiley/48x48/68.gif" /> <span style="font-size:14px;">尊敬的淘宝卖家，由于好评有礼在帮您做店内营销的时候，需要用到大量的服务器资源，为了让每个用户都能更好的使用好评有礼，现将用户分为以下几个版本：</span><br><br>
-&nbsp;&nbsp;&nbsp;&nbsp;<strong>标准版用户</strong>：一个月[9.90元]    一个季度[21.00元]    半年[36.00元]    一年[59.00元] <br>
 &nbsp;&nbsp;&nbsp;&nbsp;<strong>专业版用户</strong>：一个月[19.80元]    一个季度[42.00元]    半年[72.00元]    一年[118.00元] <br>
 &nbsp;&nbsp;&nbsp;&nbsp;<strong>VIP版用户</strong>：一个月[29.70元]    一个季度[63.00元]    半年[108.00元]    一年[177.00元] <br>
 
@@ -38,43 +37,51 @@
 <table width="90%" style="border:solid 1px; margin-left:10px;" cellspacing="1" cellpadding="1"　align="center">
   <tr>
     <td width="142" style="background-color:#3366cc;"><div align="center">&nbsp;</div></td>
-    <td width="138" style="background-color:#3366cc;"><div align="center" style="color:white; font-weight:bold;">标准版用户</div></td>
     <td width="131" style="background-color:#3366cc;"><div align="center" style="color:white; font-weight:bold;">专业版用户</div></td>
     <td width="129" style="background-color:#3366cc;"><div align="center" style="color:white; font-weight:bold;">VIP版用户</div></td>
   </tr>
   <tr>
     <td height="24"><div align="right">赠送优惠券</div></td>
     <td><div align="center">√</div></td>
+     <td><div align="center">√</div></td>
+  </tr>
+  <tr>
+    <td height="24"><div align="right">二次销售统计</div></td>
     <td><div align="center">√</div></td>
      <td><div align="center">√</div></td>
   </tr>
   <tr>
     <td height="24"><div align="right">短信自动提醒</div></td>
-    <td><div align="center">X</div></td>
     <td><div align="center">√</div></td>
     <td><div align="center">√</div></td>
   </tr>
   <tr>
     <td height="24"><div align="right">支付宝红包</div></td>
-    <td><div align="center">X</div></td>
+    <td><div align="center">√</div></td>
+    <td><div align="center">√</div></td>
+  </tr>
+  <tr>
+    <td height="24"><div align="right">包邮卡</div></td>
     <td><div align="center">√</div></td>
     <td><div align="center">√</div></td>
   </tr>
     <tr>
     <td height="24"><div align="right">好评客服审核</div></td>
     <td><div align="center">X</div></td>
-    <td><div align="center">X</div></td>
      <td><div align="center">√</div></td>
   </tr>
     <tr>
     <td height="24"><div align="right">内容自动判定</div></td>
     <td><div align="center">X</div></td>
+     <td><div align="center">√</div></td>
+  </tr>
+    <tr>
+    <td height="24"><div align="right">CRM客户关系营销</div></td>
     <td><div align="center">X</div></td>
      <td><div align="center">√</div></td>
   </tr>
     <tr>
     <td height="20"><div align="right">升级入口</div></td>
-    <td><div align="center">&nbsp;</div></td>
     <td><div align="center"> <a href='http://fuwu.taobao.com/item/subsc.htm?items=service-0-22904-2:1;' target="_blank"><b style="font-size:14px; color:Red; font-weight:bold">我要升级</b></a> </div></td>
     <td><div align="center"> <a href='http://fuwu.taobao.com/item/subsc.htm?items=service-0-22904-3:1;' target="_blank"><b style="font-size:14px; color:Red; font-weight:bold">我要升级</b></a> </div></td>
   </tr>
