--- a/top/index.html
+++ b/top/index.html
@@ -44,12 +44,12 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 </div>
 <ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:700px; margin-top:10px;">
    <li id="tab1"><a href="javascript:void(0)" title="营销推广" rel="1">营销推广</a></li>
-   <li id="tab2"><a href="javascript:void(0)" title="团购营销" rel="2">团购营销</a></li>
-   <li id="tab3"><a href="javascript:void(0)" title="好评有礼" rel="3">好评有礼</a></li>
-   <li id="tab4" style='height:25px;'><a href="javascript:void(0)" title="客户关系营销" rel="4">客户关系CRM</a>
+   <li id="tab2"><a href="http://fuwu.taobao.com/serv/detail.htm?service_id=11807" target="_blank" title="社区">团购营销</a></li>
+   <li id="tab3"><a href="http://fuwu.taobao.com/service/service.htm?service_id=4545" target="_blank" title="社区">好评有礼</a></li>
+   <li id="tab4" style='height:25px;'><a href="http://fuwu.taobao.com/serv/detail.htm?service_id=22655" target="_blank" title="社区">客服绩效</a>
    <img src='images/new.gif' style="position:relative; left:58px; top:-38px;" />
    </li>
-   <li id="tab5" style='height:25px;'><a href="javascript:void(0)" title="销售分析" rel="5">销售分析</a>
+   <li id="tab5" style='height:25px;'><a href="http://fuwu.taobao.com/serv/detail.htm?service_id=24224" target="_blank" title="社区">销售分析</a>
     <img src='images/new.gif' style="position:relative; left:58px; top:-38px;" />
     </li>
    <li><a href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" title="社区">社区</a></li>
@@ -518,7 +518,7 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
 
 
 <script type="text/javascript" language="jscript">
-    function tab(o, s, cb, ev) {//tab切换类
+    /*function tab(o, s, cb, ev) {//tab切换类
         var $ = function (o) { return document.getElementById(o) };
         var css = o.split((s || '_'));
         if (css.length != 4) return;
@@ -555,7 +555,7 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
             this.callBack.call(this);
             this['link']['cur'] = this;
         }
-    }
+    }*/
     /*
     tab 使用方法:
     new tab(标签ID, id分隔符, 单击事触发函数, 什么事件触发TAB切换);
@@ -579,7 +579,7 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
     test3_3   第三个标签项对应项目
     等等
     */
-    new tab('tabCot_product-li-currentBtn-', '-');
+    //new tab('tabCot_product-li-currentBtn-', '-');
 </script>
 </div>
 
