--- a/top/indexgroup2.html
+++ b/top/indexgroup2.html
@@ -95,14 +95,14 @@
     </ul>
 </div>
 
-<!--<div class="menu-box">
+<div class="menu-box">
 <h3 class="mytaobao-bar"><span> 帮助教程 </span>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="http://bangpai.taobao.com/group/1091516.htm" target="_blank"">查看详细帮助教程</a></span></li>
-</div>-->
+		href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" style="color:Red; font-weight:bold">查看详细帮助教程</a></span></li>
+</div>
 
 
 
