--- a/top/indexgroup2.html
+++ b/top/indexgroup2.html
@@ -101,7 +101,7 @@
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" style="color:Red; font-weight:bold">查看详细帮助教程</a></span></li>
+		href="http://bangpai.taobao.com/group/thread/1091516-273823153.htm" target="_blank" style="color:Red; font-weight:bold">查看详细帮助教程</a></span></li>
 </div>
 
 
