--- a/top/indexgroup2.html
+++ b/top/indexgroup2.html
@@ -104,6 +104,15 @@
 		href="http://bangpai.taobao.com/group/thread/1091516-273823153.htm" target="_blank" style="color:Red; font-weight:bold">查看详细帮助教程</a></span></li>
 </div>
 
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 返回旧版团购 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li><span> <a
+		href="indexgroup.html" target="_parent" style="color:Red; font-weight:bold">返回旧版团购</a></span></li>
+</div>
+
 
 
 </div>
