--- a/top/indexgroup.html
+++ b/top/indexgroup.html
@@ -144,6 +144,15 @@ name="mainframe" src="http://www.7fshop.com/top/market/addidea.aspx" frameborder
 		href="groupbuy/missionlist.aspx" target="mainframe1">任务列表</a></span></li>				
     </ul>
 </div>
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 新版团购界面 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li><span> <a
+		href="indexgroup2.html" target="_parent">新版团购界面</a></span></li>				
+    </ul>
+</div>
 
 </div>
 <!--content-->
