--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -50,7 +50,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
    <li class="currentBtn"><a href="javascript:void(0)" title="好评有礼" rel="3">好评有礼</a></li>
    <li><a href="javascript:void(0)" title="客户关系营销" rel="4">客户关系营销</a></li>
    <li class="noTab"><a href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" title="社区">社区</a></li>
-   <li class="noTab"><a href="http://bangpai.taobao.com/group/thread/1091516-266680296.htm" target="_blank" title="使用教程">使用教程</a></li>
+   <li class="noTab"><a href="http://bangpai.taobao.com/group/thread/1091516-266680296.htm" target="_blank" title="使用教程" style="color:Red">使用教程</a></li>
 </ul>
 </div>
 
