--- a/top/index.html
+++ b/top/index.html
@@ -82,6 +82,10 @@ weight:bold"><b>推荐送好礼</b></a></span></li>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
+        <li><span> <a
+		href="market/CreateAPK.aspx" target="mainframe">手机客户端</a></span></li>
+	
+	
 		<li><span> <a
 		href="market/addidea.aspx" target="mainframe">我要推广</a></span></li>
 		<li ><span> <a
