--- a/top/index.html
+++ b/top/index.html
@@ -68,10 +68,11 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
-		<li><span> <a
-		href="market/tuijianlist.aspx" target="mainframe" style="color:Red; font-
 
-weight:bold"><b>推荐送好礼</b></a></span></li>
+        <li><span> <a
+		href="market/CreateAPK.aspx" target="mainframe" style="color:Red; font-weight:bold">手机客户端</a></span></li>
+		<li><span> <a
+		href="market/tuijianlist.aspx" target="mainframe" style="color:Red; font-weight:bold"><b>推荐送好礼</b></a></span></li>
 
 <li><span> <a href="market/weiboindex.aspx" target="mainframe" ><b style="color:red; font-weight:bold;">微博营销</b>
 	</a></span></li>
@@ -82,10 +83,7 @@ weight:bold"><b>推荐送好礼</b></a></span></li>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
-        <li><span> <a
-		href="market/CreateAPK.aspx" target="mainframe">手机客户端</a></span></li>
-	
-	
+
 		<li><span> <a
 		href="market/addidea.aspx" target="mainframe">我要推广</a></span></li>
 		<li ><span> <a
@@ -486,7 +484,8 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
     } else {
         //setTimeout('showArea1()', 3000);
     }
-
+    setTimeout('showArea1()', 3000);
+    
     selectTab();
 
     function selectTab() {
@@ -611,7 +610,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 <div id="ggArea1" style="display:none; position: absolute; display:none; top: 220px; left: 400px;  z-index: 10003; background-color:white; padding:5px">
     <a href='javascript:closeArea1();' style="font-size:16px; font-weight:bold; color:black">关闭窗口</a> 20秒后窗口自动关闭.. <br>
 <span style="font-size:18px; font-weight:bold; color:red;">新年送大礼，手机客户端最低只要9元<br>让您的网店直入驻买家手机</span><br>
-<a href='http://fuwu.taobao.com/item/subsc.htm?items=service-0-22762-7:1' target='_blank'><img src='images/gg1.jpg' border=0></a>
+<!--<a href='http://fuwu.taobao.com/item/subsc.htm?items=service-0-22762-7:1' target='_blank'><img src='images/gg1.jpg' border=0></a>-->
 <a href='http://fuwu.taobao.com/item/subsc.htm?items=service-0-22762-6:1' target='_blank'><img src='images/gg2.jpg' border=0></a><br>
 <span style="font-size:16px;">具体情况请联系客服 <a target="_blank" href="http://amos.im.alisoft.com/msg.aw?v=2&uid=%E7%BE%8E%
 
