--- a/top/index.html
+++ b/top/index.html
@@ -70,7 +70,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 <ul class="group">
 
         <li><span> <a
-		href="http://www.7fshop.com/top/market/mshop.aspx" target="mainframe" style="color:Red; font-weight:bold">手机客户端</a></span></li>
+		href="http://www.7fshop.com/top/market/mshop.aspx" target="mainframe" style="color:Red; font-weight:bold">店铺APP</a></span></li>
 		<li><span> <a
 		href="market/tuijianlist.aspx" target="mainframe" style="color:Red; font-weight:bold"><b>推荐送好礼</b></a></span></li>
 
@@ -611,7 +611,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
     <a href='javascript:closeArea1();' style="font-size:16px; font-weight:bold; color:black">关闭窗口</a> 20秒后窗口自动关闭.. <br>
 <span style="font-size:18px; font-weight:bold; color:red;">新年送大礼，手机客户端最低只要9元<br>让您的网店直入驻买家手机</span><br>
 <!--<a href='http://fuwu.taobao.com/item/subsc.htm?items=service-0-22762-7:1' target='_blank'><img src='images/gg1.jpg' border=0></a>-->
-<a href='http://www.7fshop.com/top/market/mshop.aspx' target='_blank'><img src='images/gg2.jpg' border=0></a><br>
+<a href='http://www.7fshop.com/top/market/mshop.aspx'><img src='images/gg2.jpg' border=0></a><br>
 </div>
 
 
