--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -217,11 +217,13 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 
 
 <div class="menu-box">
-<h3 class="mytaobao-bar"><span> 优惠券赠送 </span>
+<h3 class="mytaobao-bar"><span> 批量赠送 </span>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">		
 		<li><span> <a href="http://haoping.7fshop.com/top/crm/msgsend.aspx" target="mainframe5">优惠券批量赠送</a></span></li>		
+   	    <li><span> <a href="http://haoping.7fshop.com/top/crm/alipaysend.aspx" target="mainframe5">支付宝红包批量赠送</a></span></li>	
+   	    <li><span> <a href="http://haoping.7fshop.com/top/crm/freecardsend.aspx" target="mainframe5">保邮卡批量赠送</a></span></li>		
     </ul>
 </div>
 
