--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -199,6 +199,8 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 <ul class="group">
 		<li><span> <a
 		href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">客户列表</a></span></li>
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/crm/grouplist.aspx" target="mainframe5">客户分组</a></span></li>
 	</ul>
 </div>
 
@@ -222,8 +224,8 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 </h3>
 <ul class="group">		
 		<li><span> <a href="http://haoping.7fshop.com/top/crm/msgsend.aspx" target="mainframe5">优惠券批量赠送</a></span></li>		
-   	    <li><span> <a href="http://haoping.7fshop.com/top/crm/alipaysend.aspx" target="mainframe5">支付宝红包批量赠送</a></span></li>	
-   	    <li><span> <a href="http://haoping.7fshop.com/top/crm/freecardsend.aspx" target="mainframe5">保邮卡批量赠送</a></span></li>		
+   	    <!--<li><span> <a href="http://haoping.7fshop.com/top/crm/alipaysend.aspx" target="mainframe5">支付宝红包批量赠送</a></span></li>	
+   	    <li><span> <a href="http://haoping.7fshop.com/top/crm/freecardsend.aspx" target="mainframe5">保邮卡批量赠送</a></span></li>	-->	
     </ul>
 </div>
 
