--- a/top/index.html
+++ b/top/index.html
@@ -78,6 +78,20 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 	</a></span></li>
 </div>
 
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 站外推广 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+
+		<li><span> <a
+		href="http://bang.7fshop.com/UserAddAds.aspx" target="mainframe">推广宝贝</a></span></li>
+		<li ><span> <a
+		href="http://bang.7fshop.com/UserAdsList.aspx" target="mainframe">推广管理
+	</a></span></li>	</ul>
+</div>
+
 <div class="menu-box">
 <h3 class="mytaobao-bar"><span> 营销推广 </span>
 <button class="menu-close">-</button>
