--- a/top/index.html
+++ b/top/index.html
@@ -92,7 +92,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 	</a></span></li>	<li ><span> <a
 		href="http://bang.7fshop.com/UserAdsList.aspx" target="mainframe">未投放的广告
 	</a></span></li>	<li ><span> <a
-		href="http://www.7fshop.com/top/qubie.html" target="mainframe">正式版本如何收费
+		href="http://www.7fshop.com/top/market/qubie.html" target="mainframe">正式版本如何收费
 	</a></span></li>	</ul>
 </div>
 
