--- a/top/market/qubie.html
+++ b/top/market/qubie.html
@@ -4,6 +4,9 @@
 <head>
     <title>版本区别说明</title>
 <link href="../css/common.css" rel="stylesheet" />
+<style>
+    td{font-size:14px;}
+</style>
 </head>
 <body style="padding:0px; margin:0px;">
 
