--- a/top/market/adslist.html
+++ b/top/market/adslist.html
@@ -24,10 +24,14 @@
     </ul>
   </div>
     <div id="main-content">
+        <input type=button onclick="window.location.href='http://bang.7fshop.com/UserAddAds.aspx'" value="开始投放广告" />
 
+    <hr />
+
+<div style="font-size:16px;">
 &nbsp;&nbsp;【特推广_店铺推广专家】齐聚了大量优质网站的百万用户资源，将您的店铺同时展现在这些网站中。<br><br>
 &nbsp;&nbsp;我们的合作网站数十家优质网站,适合各行业卖家做广告投放，以下是部分网站的广告位展示效果:<br><br>
-<br>
+</div>
  
  
 &nbsp;&nbsp;<strong>爱美妆&nbsp;首页首屏广告位</strong>:<br>
