--- a/top/index.html
+++ b/top/index.html
@@ -93,7 +93,10 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 		href="http://bang.7fshop.com/UserAdsList.aspx" target="mainframe">未投放的广告
 	</a></span></li>	<li ><span> <a
 		href="http://www.7fshop.com/top/market/qubie.html" target="mainframe">正式版本如何收费
-	</a></span></li>	</ul>
+	</a></span></li>	<li ><span> <a
+		href="http://www.7fshop.com/top/market/adslist.html" target="mainframe">广告位一览
+	</a></span></li>	
+    </ul>
 </div>
 
 <div class="menu-box">
