--- a/top/market/adslist.html
+++ b/top/market/adslist.html
@@ -33,7 +33,7 @@
 &nbsp;&nbsp;我们的合作网站数十家优质网站,适合各行业卖家做广告投放，以下是部分网站的广告位展示效果:<br><br>
 </div>
  
- <div style="height:600px; overflow:scroll"></div>
+ <div style="height:600px; overflow:scroll">
 &nbsp;&nbsp;<strong>爱美妆&nbsp;首页首屏广告位</strong>:<br>
 <img src="http://www.taolaiker.net/auto/images/ad/aimeizhuang.jpg" width="600px"  border="0"><br><br>
  
@@ -93,7 +93,7 @@
  
 &nbsp;&nbsp;<strong>型男网&nbsp;首页右侧250x250</strong>:<br>
 <img src="http://www.taolaiker.net/auto/images/ad/mangangs.jpg" width="600px"  border="0"><br><br>
-
+</div>
 
     </div>
 </div>
