--- a/top/index.html
+++ b/top/index.html
@@ -62,21 +62,6 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
             <div id="mytaobao-menu" class="box-diamond">
 <!--content-->
 
-<div class="mytaobao-bd">
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 新年特惠 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-
-        <li><span> <a
-		href="http://www.7fshop.com/top/market/mshop.aspx" target="mainframe" style="color:Red; font-weight:bold">店铺APP</a></span></li>
-		<li><span> <a
-		href="market/tuijianlist.aspx" target="mainframe" style="color:Red; font-weight:bold"><b>推荐送好礼</b></a></span></li>
-
-<li><span> <a href="market/weiboindex.aspx" target="mainframe" ><b style="color:red; font-weight:bold;">微博营销</b>
-	</a></span></li>
-</div>
 
 
 <div class="menu-box">
@@ -86,7 +71,9 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 <ul class="group">
 
 		<li><span> <a
-		href="http://bang.7fshop.com/UserAddAds.aspx" target="mainframe">推广宝贝</a></span></li>
+		href="http://bang.7fshop.com/UserAddAds.aspx" target="mainframe">我要推广宝贝</a></span></li>
+		<li><span> <a
+		href="http://bang.7fshop.com/AddShopAds.aspx" target="mainframe">我要推广店铺</a></span></li>
 		<li ><span> <a
 		href="http://bang.7fshop.com/UserAdsList.aspx?istou=1" target="mainframe">投放中的广告
 	</a></span></li>	<li ><span> <a
@@ -137,7 +124,25 @@ target="_blank"><b style="color:red; font-weight:bold;">好评有礼</b>
 
 </a></span></li>	
 	</ul>
+</div> 
+
+
+<div class="mytaobao-bd">
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 新年特惠 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+
+        <li><span> <a
+		href="http://www.7fshop.com/top/market/mshop.aspx" target="mainframe" style="color:Red; font-weight:bold">店铺APP</a></span></li>
+		<li><span> <a
+		href="market/tuijianlist.aspx" target="mainframe" style="color:Red; font-weight:bold"><b>推荐送好礼</b></a></span></li>
+
+<li><span> <a href="market/weiboindex.aspx" target="mainframe" ><b style="color:red; font-weight:bold;">微博营销</b>
+	</a></span></li>
 </div>
+
 </div>
 <!--content-->
             </div>
