--- a/top/index.html
+++ b/top/index.html
@@ -73,8 +73,8 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 
 		<li><span> <a
 		href="http://bang.7fshop.com/UserAddAds.aspx" target="mainframe">我要推广宝贝</a></span></li>
-		<li><span> <a
-		href="http://bang.7fshop.com/AddShopAds.aspx" target="mainframe">我要推广店铺</a></span></li>
+		<!--<li><span> <a
+		href="http://bang.7fshop.com/AddShopAds.aspx" target="mainframe">我要推广店铺</a></span></li>-->
 		<li ><span> <a
 		href="http://bang.7fshop.com/UserAdsList.aspx?istou=1" target="mainframe">投放中的广告
 	</a></span></li>	<li ><span> <a
