--- a/top/indexnew1.html
+++ b/top/indexnew1.html
@@ -16,9 +16,7 @@
 <div id="header">
     <div id="site-nav" style="margin-bottom:5px;">
 	    <p class="login-info">
-            <script language="javascript" type="text/javascript" 
-
-src="js_userinfoblog.aspx"></script> 
+            亲您好，欢迎进入好评秀秀！
             在线客服：
             <a target="_blank" href="http://amos.im.alisoft.com/msg.aw?v=2&uid=%E7%BE%8E%
 E6%9D%9C%E8%8E%8E%E4%B9%8B%E5%BF%83&site=cntaobao&s=1&charset=utf-8" ><img border="0" 
@@ -39,20 +37,6 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 <div id="content1">
 
 
-<div id="tabCot_product" class="tab">
-<div class="tabContainer">
-<div style="float:left; width:161px;">
-    <img alt="特特营销推广专家" src="images/logo.png" width="150" height="40" />
-</div>
-<!--<ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:600px; margin-top:10px;">
-   <li class="noTab"><a href="http://fuwu.taobao.com/serv/detail.htm?service_id=764&f=haoping" target="_blank" title="营销推广">营销推广</a></li>
-   <li class="noTab"><a href="http://fuwu.taobao.com/serv/detail.htm?service_id=11807&f=haoping" target="_blank" title="团购营销">团购营销</a></li>
-   <li class="currentBtn"><a href="javascript:void(0)" title="好评有礼" rel="3">好评有礼</a></li>
-   <li><a href="javascript:void(0)" title="客户关系营销" rel="4">客户关系营销</a></li>
-   <li class="noTab"><a href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" title="社区">社区</a></li>
-   <li class="noTab"><a href="http://bangpai.taobao.com/group/thread/1091516-266680296.htm" target="_blank" title="使用教程" style="color:Red">使用教程</a></li>
-</ul>-->
-</div>
 
 <div id="tabCot_product_1" class="tabCot" style="padding:2px 0 0 0;">
     <div id="mytaobao-panel" class="grid-c2">
@@ -102,97 +86,6 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 
 
 
-
-<div id="tabCot_product_2" class="tabCot" style="padding:2px 0 0 0; display:none">
-    <div id="mytaobao-panel" class="grid-c2">
-        <div class="col-sub">
-            <div id="mytaobao-menu" class="box-diamond">
-<!--content-->
-
-<div class="mytaobao-bd">
-
-
-
-
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 客户列表 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">客户列表</a></span></li>
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/crm/grouplist.aspx" target="mainframe5">客户分组</a></span></li>
-	</ul>
-</div>
-
-
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 营销计划 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/crm/missionadd.aspx" target="mainframe5">营销计划创建</a></span></li>
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/crm/missionlist.aspx" target="mainframe5">营销计划列表</a></span></li>
-    </ul>
-</div>
-
-
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 批量赠送 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">		
-		<li><span> <a href="http://haoping.7fshop.com/top/crm/msgsend.aspx" target="mainframe5">优惠券批量赠送</a></span></li>		
-   	    <li><span> <a href="http://haoping.7fshop.com/top/crm/alipaysend.aspx" target="mainframe5">支付宝红包批量赠送</a></span></li>	
-   	    <li><span> <a href="http://haoping.7fshop.com/top/crm/freecardsend.aspx" target="mainframe5">包邮卡批量赠送</a></span></li>	
-    </ul>
-</div>
-
-<div class="menu-box"> 
-<h3 class="mytaobao-bar"><span> 客户筛选 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=1" target="mainframe5">购买过一次的会员</a></span></li>
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=2" target="mainframe5">购买过多次的会员</a></span></li>
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=0" target="mainframe5">未成功购买的会员</a></span></li>
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=a" target="mainframe5">未购买</a></span></li>
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=b" target="mainframe5">普通会员</a></span></li>
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=c" target="mainframe5">高级会员</a></span></li>
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=d" target="mainframe5">VIP会员</a></span></li>
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=e" target="mainframe5">至尊VIP会员</a></span></li>
-	</ul>
-</div>
-
-
-</div>
-<!--content-->
-            </div>
-        </div>
-        
-        <div style="width:780px; margin-left:10px; float:left; height:1220px;">
-                <iframe style="overflow:scroll; width: 100%; height:1220px; padding:0px;" 
-
-name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameborder="0" scrolling="no"></iframe>
-        </div>
-    </div>
-</div>
-
-
-</div>
-
-</div>
 
 <br /><br /><br />
 
@@ -286,7 +179,7 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
     test3_3   第三个标签项对应项目
     等等
     */
-    new tab('tabCot_product-li-currentBtn-', '-');
+    //new tab('tabCot_product-li-currentBtn-', '-');
 </script>
 </div>
 
