--- a/top/indexnew1.html
+++ b/top/indexnew1.html
@@ -16,7 +16,7 @@
 <div id="header">
     <div id="site-nav" style="margin-bottom:5px;">
 	    <p class="login-info">
-            亲您好，欢迎进入好评秀秀！
+            亲您好，欢迎进入好评秀秀！  <a href='logout.aspx'>【点击退出】</a>
             在线客服：
             <a target="_blank" href="http://amos.im.alisoft.com/msg.aw?v=2&uid=%E7%BE%8E%
 E6%9D%9C%E8%8E%8E%E4%B9%8B%E5%BF%83&site=cntaobao&s=1&charset=utf-8" ><img border="0" 
@@ -32,7 +32,20 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
         </ul>
     </div>
     
-    <div style="width:928px;"><img src='reviewnew/images/banner4yue.jpg' border='0' /></div>
+<!--LOGO 和 广告信息-->
+<h1 id="logo" style="height:100px; margin-top:0px; padding-top:5px;">
+
+<table cellpadding=0 cellspacing=0 width="100%">
+    <tr>
+        <td><img alt="催单有礼" src="images/logo.jpg" width="192" />
+	</td>
+        <td style="padding-left:20px;">
+	<img alt="催单有礼" src="images/banner.gif" /></td>
+    </tr>
+</table>
+
+	
+</h1>
 
 <div id="content1">
 
@@ -372,7 +385,7 @@ background: none repeat scroll 0% 0% rgb(153, 153, 153); opacity: 0.4; width: 10
 
 <script>
     if (version == 2 || version == 3) {
-        document.getElementById('viparea').style.display = "";
+        //document.getElementById('viparea').style.display = "";
     }
 </script>
 
