--- a/top/indexnew1.html
+++ b/top/indexnew1.html
@@ -71,9 +71,10 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 <h3 class="mytaobao-bar" onclick="focusObj(1)"><span> 好评秀秀 </span>
 <button class="menu-close">-</button>
 </h3>
-<ul class="group" id="area1">	
+<ul class="group" id="area1">	<li ><span> <a
+		href="http://haoping.7fshop.com/top/reviewnew/default1.aspx" target="mainframe2">秀秀首页</a></span></li>	
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/reviewnew/reviewlist.aspx" target="mainframe2">好评列表</a></span></li>	
+		href="http://haoping.7fshop.com/top/reviewnew/reviewlistnew.aspx" target="mainframe2">好评列表</a></span></li>	
 		<li ><span> <a
 		href="http://haoping.7fshop.com/top/reviewnew/reviewindex.aspx" target="mainframe2">展示中好评</a></span></li>		
     	<li ><span> <a
